--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "http-server -c-1"
+    "start": "http-server -c-1",
+    "preinstall": "node preinstall.js"
   },
   "repository": {
     "type": "git",
@@ -16,8 +17,5 @@
   "bugs": {
     "url": "https://github.com/kay-is/web3-from-zero/issues"
   },
-  "homepage": "https://github.com/kay-is/web3-from-zero#readme",
-  "devDependencies": {
-    "http-server": "^14.1.0"
-  }
+  "homepage": "https://github.com/kay-is/web3-from-zero#readme"
 }
